# hs-quic

./: .gitignore  README.md  package.yaml  quic.cabal  stack.yaml
Network/: QUIC.hs  Session.hs  Time.hs
Network/QUIC/: Backend.hs  Codec.hs  Connection.hs  Context.hs  ErrCode.hs  Get.hs  Handshake.hs  Internal.hs  Keys.hs  Manager.hs  Packet.hs  Payload.hs  Priority.hs  State.hs  TLS.hs  Time.hs  Types.hs  UFloat16.hs  WireEnum.hs
Network/QUIC/Codec/: Get.hs  Internal.hs  Put.hs
Network/QUIC/Handshake/: Client.hs  Server.hs
Network/QUIC/TLS/: Backend.hs  Disengage.hs  Engage.hs  Types.hs
Network/QUIC/Types/: Ack.hs
examples/: SimpleClient.hs  SimpleServer.hs  client.hs  server.hs
test/: Spec.hs  doctest.hs
