name:                quic
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/keizo042/quic#readme
license:             BSD3
license-file:        LICENSE
author:              Koichi Nakanishi
maintainer:          keizo.bookman@gmail.com
copyright:           2017 Koichi Nakanishi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Network.QUIC
  other-modules:       Network.QUIC.Internal
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       async, 
                       network,
                       time,
                       containers
  default-language:    Haskell2010


test-suite quic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , quic
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/keizo042/quic
