name:                quic
version:             0.1.0.0
-- synopsis:
description:         quic implementation
homepage:            https://github.com/keizo042/quic#readme
license:             BSD3
license-file:        LICENSE
author:              Koichi Nakanishi
maintainer:          keizo.bookman@gmail.com
copyright:           2017 Koichi Nakanishi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Network.QUIC
                       Network.QUIC.Types
  other-modules:       Network.QUIC.Internal
                       Network.QUIC.TLS
                       Network.QUIC.Codec
                       Network.QUIC.Codec.Internal
                       Network.QUIC.Codec.Put
                       Network.QUIC.Codec.Get
                       Network.QUIC.Connection
                       Network.QUIC.Manager
                       Network.QUIC.Priority
                       Network.QUIC.UFloat16
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       async, 
                       network,
                       time,
                       binary,
                       cereal,
                       containers,
                       tls,
                       cryptonite,
                       array,
                       data-default-class
  default-language:    Haskell2010


test-suite quic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , quic
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/keizo042/quic
